--- a/wiki/bg/Workbenches.html
+++ b/wiki/bg/Workbenches.html
@@ -30,7 +30,7 @@
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../bg/Online_Help_Toc.html" title="Online Help Toc/bg">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
 </div>
-<p>FreeCAD, like many modern design applications such as <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Autodesk_Revit">Revit</a> or <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/CATIA">CATIA</a>, is based on the concept of <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Workbench">Workbench</a>. A workbench can be considered as a set of tools specially grouped for a certain task. In a traditional furniture workshop, you would have a work table for the person who works with wood, another one for the one who works with metal pieces, and maybe a third one for the guy who mounts all the pieces together.
+<p>FreeCAD, &#1087;&#1086;&#1076;&#1086;&#1073;&#1085;&#1086; &#1085;&#1072; &#1084;&#1085;&#1086;&#1075;&#1086; &#1089;&#1098;&#1074;&#1088;&#1077;&#1084;&#1077;&#1085;&#1085;&#1080; &#1076;&#1080;&#1079;&#1072;&#1081;&#1085;&#1077;&#1088;&#1089;&#1082;&#1080; &#1087;&#1088;&#1080;&#1083;&#1086;&#1078;&#1077;&#1085;&#1080;&#1103; &#1082;&#1072;&#1090;&#1086; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Autodesk_Revit">Revit</a> &#1080;&#1083;&#1080; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/CATIA">CATIA</a>, &#1089;&#1077; &#1086;&#1089;&#1085;&#1086;&#1074;&#1072;&#1074;&#1072; &#1085;&#1072; &#1082;&#1086;&#1085;&#1094;&#1077;&#1087;&#1094;&#1080;&#1103;&#1090;&#1072; &#1079;&#1072; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Workbench">Workbench</a>. &#1056;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072;&#1090;&#1072; &#1084;&#1072;&#1089;&#1072; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1077; &#1088;&#1072;&#1079;&#1075;&#1083;&#1077;&#1078;&#1076;&#1072; &#1082;&#1072;&#1090;&#1086; &#1085;&#1072;&#1073;&#1086;&#1088; &#1086;&#1090; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;, &#1089;&#1087;&#1077;&#1094;&#1080;&#1072;&#1083;&#1085;&#1086; &#1075;&#1088;&#1091;&#1087;&#1080;&#1088;&#1072;&#1085;&#1080; &#1079;&#1072; &#1086;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1077;&#1085;&#1072; &#1079;&#1072;&#1076;&#1072;&#1095;&#1072;. &#1042; &#1090;&#1088;&#1072;&#1076;&#1080;&#1094;&#1080;&#1086;&#1085;&#1085;&#1072; &#1084;&#1077;&#1073;&#1077;&#1083;&#1085;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1080;&#1083;&#1085;&#1080;&#1094;&#1072; &#1097;&#1077; &#1080;&#1084;&#1072;&#1090;&#1077; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072; &#1084;&#1072;&#1089;&#1072; &#1079;&#1072; &#1095;&#1086;&#1074;&#1077;&#1082;&#1072;, &#1082;&#1086;&#1081;&#1090;&#1086; &#1088;&#1072;&#1073;&#1086;&#1090;&#1080; &#1089; &#1076;&#1098;&#1088;&#1074;&#1086;, &#1086;&#1097;&#1077; &#1077;&#1076;&#1085;&#1072; &#1079;&#1072; &#1090;&#1072;&#1079;&#1080;, &#1082;&#1086;&#1103;&#1090;&#1086; &#1088;&#1072;&#1073;&#1086;&#1090;&#1080; &#1089; &#1084;&#1077;&#1090;&#1072;&#1083;&#1085;&#1080; &#1095;&#1072;&#1089;&#1090;&#1080; &#1080;, &#1084;&#1086;&#1078;&#1077; &#1073;&#1080;, &#1090;&#1088;&#1077;&#1090;&#1072; &#1079;&#1072; &#1095;&#1086;&#1074;&#1077;&#1082;&#1072;, &#1082;&#1086;&#1081;&#1090;&#1086; &#1084;&#1086;&#1085;&#1090;&#1080;&#1088;&#1072; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1095;&#1072;&#1089;&#1090;&#1080; &#1079;&#1072;&#1077;&#1076;&#1085;&#1086;.
 </p><p>In FreeCAD, the same concept applies. Tools are grouped into workbenches according to the tasks they are related to.
 </p><p>When you switch from one workbench to another, the tools available on the interface change. Toolbars, command bars and possibly other parts of the interface switch to the new workbench, but the contents of your scene doesn't change. You could, for example, start drawing 2D shapes with the Draft Workbench, then work further on them with the Part Workbench.
 </p><p>Note that sometimes a Workbench is referred to as a <i>Module</i>. However, Workbenches and Modules are different entities. A Module is any extension of FreeCAD, while a Workbench is a special type of Module with a GUI configuration (toolbars and menus).
@@ -99,12 +99,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112175456
+Cached time: 20260112175705
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.154 seconds
-Real time usage: 0.278 seconds
+CPU time usage: 0.129 seconds
+Real time usage: 0.205 seconds
 Preprocessor visited node count: 278/1000000
 Post&#8208;expand include size: 7803/2097152 bytes
 Template argument size: 2271/2097152 bytes
@@ -115,19 +115,19 @@ Unstrip post&#8208;expand size: 4252/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.461      1 -total
- 42.81%   15.181      1 Template:Userdocnavi/bg
- 14.23%    5.045      1 Template:Navigation_menu_2
-  8.63%    3.062      1 Template:MenuCommand
-  8.62%    3.055      1 Template:Docnav/bg
-  8.37%    2.967      1 Template:Docnav
-  7.96%    2.824      5 Template:Incode
-  7.51%    2.664      2 Template:VersionMinus
-  7.24%    2.567      1 Template:Button
-  5.89%    2.089      3 Template:Version
+100.00%   21.320      1 -total
+ 25.75%    5.490      1 Template:Userdocnavi/bg
+ 12.48%    2.660      1 Template:Docnav
+ 10.70%    2.282      3 Template:Version
+ 10.66%    2.272      5 Template:Incode
+ 10.15%    2.163      1 Template:Navigation_menu_2
+ 10.14%    2.161      1 Template:MenuCommand
+  9.47%    2.018      1 Template:Docnav/bg
+  9.14%    1.948      2 Template:VersionMinus
+  5.92%    1.263      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:80090-0!canonical and timestamp 20260112175456 and revision id 1678816. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:80090-0!canonical and timestamp 20260112175705 and revision id 1737620. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
