--- a/wiki/bg/Online_Help_Toc.html
+++ b/wiki/bg/Online_Help_Toc.html
@@ -42,7 +42,7 @@
 <li><a href="../Navigation_Cube.html" title="Navigation Cube">The navigation cube</a></li>
 <li><a href="../bg/Document_structure.html" title="Document structure/bg">&#1057;&#1090;&#1088;&#1091;&#1082;&#1090;&#1091;&#1088;&#1072; &#1085;&#1072; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090; &#1074;&#1098;&#1074; FreeCAD</a></li>
 <li><a href="../bg/Property_View.html" title="Property View/bg">&#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;</a></li></ul></li></ul>
-<ul><li>&#1056;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080; <a href="../Workbenches.html" title="Workbenches">Workbenches</a>
+<ul><li><a href="../bg/Workbenches.html" title="Workbenches/bg">&#1056;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080;</a>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Standard tools for all Workbenches</a></li>
 <li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Assembly_Workbench.html" title="Assembly Workbench">The Assembly Workbench</a> (<span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>)</li>
 <li><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Workbench.html" title="BIM Workbench">The BIM Workbench</a> (combines the Arch Workbench and external BIM Workbench available in <span style="font-size:small;color:blue;">0.21 and below</span>)</li>
@@ -135,12 +135,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112171921
+Cached time: 20260112180153
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.108 seconds
-Real time usage: 0.150 seconds
+CPU time usage: 0.098 seconds
+Real time usage: 0.168 seconds
 Preprocessor visited node count: 94/1000000
 Post&#8208;expand include size: 5936/2097152 bytes
 Template argument size: 1925/2097152 bytes
@@ -151,14 +151,14 @@ Unstrip post&#8208;expand size: 4519/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.829      1 -total
- 65.73%    7.118      1 Template:Userdocnavi/bg
- 24.50%    2.653      1 Template:Navigation_menu_2
- 17.75%    1.922      2 Template:Version
- 12.45%    1.348      2 Template:VersionMinus
+100.00%   15.649      1 -total
+ 48.42%    7.577      1 Template:Userdocnavi/bg
+ 27.04%    4.231      2 Template:VersionMinus
+ 22.02%    3.446      2 Template:Version
+ 18.63%    2.915      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260112171921 and revision id 1737586. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260112180153 and revision id 1737626. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
