--- a/wiki/Macro_Multi_Export.html
+++ b/wiki/Macro_Multi_Export.html
@@ -82,29 +82,30 @@ Macro Multi Export
 <li>AMF - Additive Manufacturing Format (XML-based 3D printing)</li></ul>
 <p><b>Features:</b>
 </p>
-<ul><li>Export to multiple formats in a single operation</li>
-<li>User-friendly dialog for format selection</li>
-<li>Configurable output directory and base filename</li>
-<li>Mesh tolerance settings for STL/OBJ/PLY/3MF/AMF exports</li>
-<li>Preview of files to be created</li>
-<li>Quick select buttons: "Select All", "Select None", "Reset Defaults"</li>
-<li>Default formats: STL, STEP, and 3MF are pre-selected</li></ul>
+<ul><li>Export to multiple formats in a single operation.</li>
+<li>User-friendly dialog for format selection.</li>
+<li>Configurable output directory and base filename.</li>
+<li>Mesh tolerance settings for STL/OBJ/PLY/3MF/AMF exports.</li>
+<li>Preview of files to be created.</li>
+<li>Quick select buttons: "Select All", "Select None", "Reset Defaults".</li>
+<li>Default formats: STL, STEP, and 3MF are pre-selected.</li></ul>
 <h2><span class="mw-headline" id="Usage">Usage</span></h2>
-<ol><li>Select one or more objects in the 3D view that you want to export</li>
-<li>Run the macro from <b>Macro &rarr; Macros &rarr; MultiExport &rarr; Execute</b></li>
+<ol><li>Select one or more objects in the 3D view that you want to export.</li>
+<li>Run the macro from <b>Macro &rarr; Macros &rarr; MultiExport &rarr; Execute</b>.</li>
 <li>In the dialog:
-<ul><li>Review the selected objects in the "Objects to Export" section</li>
-<li>Check the formats you want to export to (STL, STEP, 3MF are selected by default)</li>
-<li>Choose an output directory using the "Browse..." button</li>
-<li>Enter a base filename (the format extension will be appended automatically)</li>
-<li>Optionally adjust mesh tolerance settings for mesh-based formats</li></ul></li>
-<li>Click "Export" to create the files</li></ol>
-<figure class="mw-halign-center" typeof="mw:File"><a href="index.php?title=Macro_Multi_Export_dialog.png&amp;filetimestamp=20260106014550&amp;.html" class="mw-file-description"><img src="File/Macro_Multi_Export_dialog.png" decoding="async" width="400" height="568" class="mw-file-element" data-file-width="1002" data-file-height="1424"></a><figcaption></figcaption></figure>
+<ul><li>Review the selected objects in the "Objects to Export" section.</li>
+<li>Check the formats you want to export to (STL, STEP, 3MF are selected by default).</li>
+<li>Choose an output directory using the "Browse..." button.</li>
+<li>Enter a base filename (the format extension will be appended automatically).</li>
+<li>Optionally adjust mesh tolerance settings for mesh-based formats.</li></ul></li>
+<li>Click "Export" to create the files.</li></ol>
+<p><span typeof="mw:File"><a href="index.php?title=Macro_Multi_Export_dialog.png&amp;filetimestamp=20260106014550&amp;.html" class="mw-file-description"><img src="File/Macro_Multi_Export_dialog.png" decoding="async" width="400" height="568" class="mw-file-element" data-file-width="1002" data-file-height="1424"></a></span>
+</p>
 <h2><span class="mw-headline" id="Requirements">Requirements</span></h2>
 <ul><li>FreeCAD 0.21 or later</li>
 <li>Objects with solid shapes (Part or PartDesign bodies)</li></ul>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
-<ol><li>Download the macro file: <a href="index.php?title=Special;Upload&amp;wpDestFile=MultiExport.FCMacro.html" class="new" title="MultiExport.FCMacro">MultiExport.FCMacro</a></li>
+<ol><li>Download the macro file: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/spkane/freecad-robust-mcp-and-more/refs/heads/main/macros/Multi_Export/MultiExport.FCMacro">MultiExport.FCMacro</a></li>
 <li>Copy the file to your FreeCAD macro directory:
 <ul><li><b>macOS</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/Library/Application Support/FreeCAD/Macro/</span></li>
 <li><b>Linux</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/.local/share/FreeCAD/Macro/</span></li>
@@ -117,24 +118,33 @@ Macro Multi Export
 <li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub Repository (freecad-robust-mcp-and-more)</a></li></ul>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Macro_Multi_Export.png&amp;filetimestamp=20260106011316&amp;.html" class="mw-file-description"><img src="File/Macro_Multi_Export.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p><p><br>
-<b>Macro_Multi_Export.FCMacro</b>
-</p><p>- <a rel="nofollow" class="external free" href="https://github.com/spkane/freecad-robust-mcp-and-more/blob/main/macros/Multi_Export/MultiExport.FCMacro">https://github.com/spkane/freecad-robust-mcp-and-more/blob/main/macros/Multi_Export/MultiExport.FCMacro</a>
+</p><p><b>Macro_Multi_Export.FCMacro</b>
+</p>
+<div class="plainlinks" style="width:300px; text-align:center; margin:10px auto;">
+<div style="border:1px outset #9eb4b5; background:#f0fdf8; margin:5px; padding:5px; white-space:nowrap; -webkit-border-radius: 5px; -moz-border-radius: 5px;">
+<p><span typeof="mw:File"><a href="https://raw.githubusercontent.com/spkane/freecad-robust-mcp-and-more/refs/heads/main/macros/Multi_Export/MultiExport.FCMacro" rel="nofollow"><img src="File/Nuvola_apps_download_manager.png" decoding="async" width="35" height="35" class="mw-file-element" data-file-width="128" data-file-height="128"></a></span>
+</p><p><span class="CodeDownload" style="font-weight:bold"><a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/spkane/freecad-robust-mcp-and-more/refs/heads/main/macros/Multi_Export/MultiExport.FCMacro">MultiExport.FCMacro</a></span>
+</p>
+</div>
+</div>
+<p><br>
 </p>
 <h2><span class="mw-headline" id="Links">Links</span></h2>
 <ul><li><a href="Std_Export.html" title="Std Export">Std Export</a> - FreeCAD's built-in export function</li>
 <li><a href="Import_Export.html" title="Import Export">Import Export</a> - Overview of FreeCAD import/export formats</li></ul>
+<p><br>
+</p>
 <!-- 
 NewPP limit report
-Cached time: 20260106060327
+Cached time: 20260112185549
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.020 seconds
-Real time usage: 0.021 seconds
-Preprocessor visited node count: 135/1000000
-Post&#8208;expand include size: 2547/2097152 bytes
-Template argument size: 845/2097152 bytes
+CPU time usage: 0.028 seconds
+Real time usage: 0.030 seconds
+Preprocessor visited node count: 143/1000000
+Post&#8208;expand include size: 3192/2097152 bytes
+Template argument size: 1112/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -142,12 +152,13 @@ Unstrip post&#8208;expand size: 0/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    2.864      1 -total
- 64.07%    1.835      1 Template:Macro
- 29.43%    0.843      3 Template:FileName
+100.00%    4.005      1 -total
+ 51.06%    2.045      1 Template:Macro
+ 22.42%    0.898      3 Template:FileName
+ 20.82%    0.834      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260106060331 and revision id 1728151. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260112185625 and revision id 1737627. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
