--- a/wiki/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/Macro_Cut_Object_For_Magnets.html
@@ -72,38 +72,36 @@ Macro Cut Object for Magnets
 <p>This macro cuts a 3D object along a specified plane and automatically adds aligned magnet holes to both resulting pieces. The holes are positioned with intelligent collision detection to ensure they don't break through the outer walls of the object.
 </p><p>This is particularly useful for:
 </p>
-<ul><li>Creating multi-part prints that snap together with embedded magnets</li>
-<li>Splitting large objects for smaller 3D printer beds while maintaining alignment</li>
-<li>Adding magnetic closure mechanisms to enclosures and cases</li></ul>
+<ul><li>Creating multi-part prints that snap together with embedded magnets.</li>
+<li>Splitting large objects for smaller 3D printer beds while maintaining alignment.</li>
+<li>Adding magnetic closure mechanisms to enclosures and cases.</li></ul>
 <p><b>Key Features:</b>
 </p>
-<ul><li>Cut along preset planes (XY, XZ, YZ) or model datum planes</li>
-<li>Automatic hole placement with even distribution along the cut edge</li>
-<li>Surface collision detection prevents holes from breaking through walls</li>
-<li>Configurable hole diameter, depth, and count</li>
-<li>Preferred and minimum edge clearance settings</li>
-<li>Smart repositioning of holes when initial placement fails safety checks</li>
-<li>Creates PartDesign::Body objects with parametric Hole features</li>
-<li>Supports re-cutting already-cut objects (preserves existing holes)</li>
-<li>Automatically separates the two parts for easy viewing</li></ul>
+<ul><li>Cut along preset planes (XY, XZ, YZ) or model datum planes.</li>
+<li>Automatic hole placement with even distribution along the cut edge.</li>
+<li>Surface collision detection prevents holes from breaking through walls.</li>
+<li>Configurable hole diameter, depth, and count.</li>
+<li>Preferred and minimum edge clearance settings.</li>
+<li>Smart repositioning of holes when initial placement fails safety checks.</li>
+<li>Creates PartDesign::Body objects with parametric Hole features.</li>
+<li>Supports re-cutting already-cut objects (preserves existing holes).</li>
+<li>Automatically separates the two parts for easy viewing.</li></ul>
 <h2><span class="mw-headline" id="Usage">Usage</span></h2>
-<ol><li>Open a document with the object you want to cut</li>
-<li>Optionally select the object and/or a datum plane before running the macro</li>
-<li>Run the macro from <b>Macro &rarr; Macros &rarr; CutObjectForMagnets &rarr; Execute</b></li>
+<ol><li>Open a document with the object you want to cut.</li>
+<li>Optionally select the object and/or a datum plane before running the macro.</li>
+<li>Run the macro from <b>Macro &rarr; Macros &rarr; CutObjectForMagnets &rarr; Execute</b>.</li>
 <li>In the dialog:
-<ul><li>Select the body to cut from the dropdown</li>
-<li>Choose the cut plane type (Preset or Model Plane)</li>
-<li>For preset planes, set the offset from origin</li>
+<ul><li>Select the body to cut from the dropdown.</li>
+<li>Choose the cut plane type (Preset or Model Plane).</li>
+<li>For preset planes, set the offset from origin.</li>
 <li>Configure magnet hole parameters:
-<ul><li><b>Diameter</b>: Hole diameter (should match your magnet size)</li>
-<li><b>Depth</b>: Hole depth from cut surface</li>
-<li><b>Number of Holes</b>: Total holes to create</li>
-<li><b>Edge Clearance (Preferred)</b>: Ideal distance from hole edge to object surface</li>
-<li><b>Edge Clearance (Minimum)</b>: Minimum acceptable clearance</li></ul></li></ul></li>
-<li>Click "Execute Cut"</li></ol>
+<ul><li><b>Diameter</b>: Hole diameter (should match your magnet size).</li>
+<li><b>Depth</b>: Hole depth from cut surface.</li>
+<li><b>Number of Holes</b>: Total holes to create.</li>
+<li><b>Edge Clearance (Preferred)</b>: Ideal distance from hole edge to object surface.</li>
+<li><b>Edge Clearance (Minimum)</b>: Minimum acceptable clearance.</li></ul></li></ul></li>
+<li>Click "Execute Cut".</li></ol>
 <figure class="mw-halign-center" typeof="mw:File"><a href="index.php?title=MacroCutObjectForMagnetsDialog.png&amp;filetimestamp=20260106015545&amp;.html" class="mw-file-description"><img src="File/MacroCutObjectForMagnetsDialog.png" decoding="async" width="400" height="442" class="mw-file-element" data-file-width="994" data-file-height="1098"></a><figcaption></figcaption></figure>
-<p><br>
-</p>
 <h2><span class="mw-headline" id="Example">Example</span></h2>
 <p>This image shows a vase object in its original form, and after being cut multiple times with the macro. Magnets can then be inserted to object, and the object can be re-assembled. This example was to create a "breakable" vase for a theatrical stage performance, but there are many other potential uses as well.
 </p>
@@ -111,25 +109,25 @@ Macro Cut Object for Magnets
 <h2><span class="mw-headline" id="How_It_Works">How It Works</span></h2>
 <p><b>Cutting Process:</b>
 </p>
-<ol><li>Creates a large half-space box aligned with the cutting plane</li>
-<li>Uses boolean operations to split the object into two parts</li>
-<li>Creates PartDesign::Body containers for each half</li></ol>
+<ol><li>Creates a large half-space box aligned with the cutting plane.</li>
+<li>Uses boolean operations to split the object into two parts.</li>
+<li>Creates PartDesign::Body containers for each half.</li></ol>
 <p><b>Hole Placement Algorithm:</b>
 </p>
-<ol><li>Calculates hole positions evenly distributed along the cut face perimeter</li>
-<li>For each position, validates against BOTH parts (not just one)</li>
-<li>Uses preferred clearance first, falls back to minimum if needed</li>
-<li>Checks for hole-to-hole spacing (minimum 2x diameter)</li>
+<ol><li>Calculates hole positions evenly distributed along the cut face perimeter.</li>
+<li>For each position, validates against BOTH parts (not just one).</li>
+<li>Uses preferred clearance first, falls back to minimum if needed.</li>
+<li>Checks for hole-to-hole spacing (minimum 2x diameter).</li>
 <li>Repositions holes that fail safety checks using multiple strategies:
-<ul><li>Reduced clearance at same position</li>
-<li>Increased inset from edge</li>
-<li>Alternative positions along the perimeter</li></ul></li></ol>
+<ul><li>Reduced clearance at same position.</li>
+<li>Increased inset from edge.</li>
+<li>Alternative positions along the perimeter.</li></ul></li></ol>
 <p><b>Safety Features:</b>
 </p>
-<ul><li>Creates test cylinders to check if holes would break through walls</li>
-<li>Validates each hole against both the top and bottom parts</li>
-<li>Skips holes that cannot be safely placed</li>
-<li>Reports repositioned and skipped holes in the console</li></ul>
+<ul><li>Creates test cylinders to check if holes would break through walls.</li>
+<li>Validates each hole against both the top and bottom parts.</li>
+<li>Skips holes that cannot be safely placed.</li>
+<li>Reports repositioned and skipped holes in the console.</li></ul>
 <h2><span class="mw-headline" id="Parameters">Parameters</span></h2>
 <table class="wikitable">
 <tbody><tr>
@@ -173,16 +171,16 @@ Macro Cut Object for Magnets
 <td>0.5 mm
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Requirements">Requirements</span></h2>
-<ul><li>FreeCAD 0.19 or later</li>
-<li>An object with a solid shape (Part or PartDesign body)</li>
-<li>For model plane mode: a datum plane or object with planar faces</li></ul>
+<ul><li>FreeCAD 0.19 or later.</li>
+<li>An object with a solid shape (Part or PartDesign body).</li>
+<li>For model plane mode: a datum plane or object with planar faces.</li></ul>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
-<ol><li>Download the macro file: <a href="index.php?title=Special;Upload&amp;wpDestFile=CutObjectForMagnets.FCMacro.html" class="new" title="CutObjectForMagnets.FCMacro">CutObjectForMagnets.FCMacro</a></li>
+<ol><li>Download the macro file: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/spkane/freecad-robust-mcp-and-more/refs/heads/main/macros/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro">CutObjectForMagnets.FCMacro</a>.</li>
 <li>Copy the file to your FreeCAD macro directory:
 <ul><li><b>macOS</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/Library/Application Support/FreeCAD/Macro/</span></li>
 <li><b>Linux</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/.local/share/FreeCAD/Macro/</span></li>
 <li><b>Windows</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%APPDATA%/FreeCAD/Macro/</span></li></ul></li>
-<li>Optionally, download the toolbar icon and place it in the same directory</li></ol>
+<li>Optionally, download the toolbar icon and place it in the same directory.</li></ol>
 <h2><span class="mw-headline" id="Tips">Tips</span></h2>
 <ul><li><b>Magnet sizing</b>: Measure your magnets carefully. Common sizes are 3mm, 5mm, and 6mm diameter.</li>
 <li><b>Add tolerance</b>: Consider adding 0.1-0.2mm to the diameter for easier magnet insertion.</li>
@@ -196,25 +194,34 @@ Macro Cut Object for Magnets
 <li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub Repository (freecad-robust-mcp-and-more)</a></li></ul>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Macro_Cut_Object_For_Magnets.png&amp;filetimestamp=20260106011212&amp;.html" class="mw-file-description"><img src="File/Macro_Cut_Object_For_Magnets.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p><p><br>
-<b>Macro_Cut_Object_For_Magnets.FCMacro</b>
-</p><p>- <a rel="nofollow" class="external free" href="https://github.com/spkane/freecad-robust-mcp-and-more/blob/main/macros/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro">https://github.com/spkane/freecad-robust-mcp-and-more/blob/main/macros/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro</a>
+</p><p><b>Macro_Cut_Object_For_Magnets.FCMacro</b>
+</p>
+<div class="plainlinks" style="width:300px; text-align:center; margin:10px auto;">
+<div style="border:1px outset #9eb4b5; background:#f0fdf8; margin:5px; padding:5px; white-space:nowrap; -webkit-border-radius: 5px; -moz-border-radius: 5px;">
+<p><span typeof="mw:File"><a href="https://raw.githubusercontent.com/spkane/freecad-robust-mcp-and-more/refs/heads/main/macros/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro" rel="nofollow"><img src="File/Nuvola_apps_download_manager.png" decoding="async" width="35" height="35" class="mw-file-element" data-file-width="128" data-file-height="128"></a></span>
+</p><p><span class="CodeDownload" style="font-weight:bold"><a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/spkane/freecad-robust-mcp-and-more/refs/heads/main/macros/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro">CutObjectForMagnets.FCMacro</a></span>
+</p>
+</div>
+</div>
+<p><br>
 </p>
 <h2><span class="mw-headline" id="Links">Links</span></h2>
-<ul><li><a href="Part_Slice.html" title="Part Slice">Part Slice</a> - FreeCAD's built-in slice tool</li>
-<li><a href="PartDesign_Hole.html" title="PartDesign Hole">PartDesign Hole</a> - Parametric hole feature documentation</li>
-<li><a href="PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a> - Body container documentation</li></ul>
+<ul><li><a href="Part_Slice.html" title="Part Slice">Part Slice</a> - FreeCAD's built-in slice tool.</li>
+<li><a href="PartDesign_Hole.html" title="PartDesign Hole">PartDesign Hole</a> - Parametric hole feature documentation.</li>
+<li><a href="PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a> - Body container documentation.</li></ul>
+<p><br>
+</p>
 <!-- 
 NewPP limit report
-Cached time: 20260106060426
+Cached time: 20260112190840
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.032 seconds
-Real time usage: 0.035 seconds
-Preprocessor visited node count: 158/1000000
-Post&#8208;expand include size: 2678/2097152 bytes
-Template argument size: 956/2097152 bytes
+CPU time usage: 0.024 seconds
+Real time usage: 0.025 seconds
+Preprocessor visited node count: 139/1000000
+Post&#8208;expand include size: 3367/2097152 bytes
+Template argument size: 1267/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -222,12 +229,13 @@ Unstrip post&#8208;expand size: 0/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    3.892      1 -total
- 59.20%    2.304      1 Template:Macro
- 33.74%    1.313      3 Template:FileName
+100.00%    3.423      1 -total
+ 49.55%    1.696      1 Template:Macro
+ 22.21%    0.760      3 Template:FileName
+ 21.41%    0.733      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409406-0!canonical and timestamp 20260106060432 and revision id 1728153. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409406-0!canonical and timestamp 20260112190913 and revision id 1737629. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
